# GIST3DR

./: .env  .gitignore  CONTRIBUTING.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
client/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
client/src/: middleware.js
client/src/api/: apiClient.js  auth.js  patient.js
client/src/app/: layout.js  page.js  styles.css
client/src/app/add-patient/: page.jsx
client/src/app/ar/: page.js
client/src/app/dashboard/: page.js
client/src/app/sign-in/: page.js
client/src/app/sign-up/: page.js
client/src/app/user/: page.jsx
client/src/components/: AddPatients.jsx  AddUser.jsx  DemoAR.jsx  Navbar.jsx  PatientsList.jsx  Sidebar.jsx  UserInfo.jsx  UserInput.jsx  UserPage.jsx
client/src/components/ar/: ar.jsx
client/src/components/blocks/: features-section-demo-3.jsx
client/src/components/model-renders/: 3d.jsx  aframe-3d-render.jsx  aframe-ar-render.jsx  ar.jsx  bones-3d-render.jsx  screw-3d-render.jsx  (+2 more)
client/src/hooks/: useAuth.js  useFetchPatients.js  useInitializeAuth.js  usePatientData.js
client/src/stores/: authStore.js  patientStore.js
server/: API_DOCS.md  local_main.py  main.py  pyproject.toml  test.py
server/database/schemas/: tables.py
server/database/utils/: connect.py  populate.py  storage.py
server/routes/: auth.py  patients.py  users.py
server/utils/: ar_model.py  dicom.py  exporter.py  measurements.py  modal_setup.py  model.py  schema.py  setup.py
src/app/: globals.css  layout.js  page.js
src/app/dashboard/: page.js
src/components/: AddUser.jsx  Navbar.jsx  PatientsList.jsx  SearchInput.jsx  UserInfo.jsx  UserInput.jsx  UserPage.jsx
src/components/ui/: tabs.jsx
(+13 files in other folders)
